Start work on v3
- Hopefully better API
- More sustainable ways of doing this rather than relying on Unsafe